# stratum

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.claude/: mcp.json
.githooks/: pre-push
.github/workflows/: publish.yml  test.yml
app/: .gitignore  .mcp.json  index.html  package.json  tailwind.config.js  vite.config.js
app/.claude/: hookify.breadcrumb-intent.local.md  mcps.json  settings.json
app/.interface-design/: system.md
app/docs/: PRD.md  connectors.md  taxonomy.md
app/poc/: vision-surface-variations.html  vision-surface.html
app/scripts/: agent-activity-hook.sh  agent-error-hook.sh  analyze-orphans.mjs  find-orphans.mjs  fix-phases.mjs  phase-audit.mjs  session-end-hook.sh  session-start-hook.sh  vision-hook.sh  vision-track.mjs  wire-all-orphans.mjs  wire-orphans.mjs
blog/: claude-code-tutorial.md  introducing-stratum.md  stratum-in-claude-code.md  stratum-in-codex.md
examples/: 01_sentiment.py  02_migrate.py  03_parallel.py  04_refine.py  05_debate.py  06_hitl.py  _debug2.py
meta/: README.md  pyproject.toml
meta/src/stratum_meta/: cli.py
stratum-mcp/: README.md  pyproject.toml  server.json
stratum-mcp/contracts/: audit-record.v1.schema.json  build-stream-event.v0.2.6.schema.json  build-stream-event.v0.2.7.schema.json  flow-state.v1.schema.json  gate-mutation.v1.schema.json  query-flows.v1.schema.json  query-gates.v1.schema.json
stratum-mcp/src/stratum_mcp/: auditor.py  doctor.py  errors.py  events.py  executor.py  migrate.py  parallel_exec.py  pricing.py  proc_identity.py  result_cache.py  run_budget.py  serve.py  server.py  spec.py  task_compiler.py  worktree.py
stratum-mcp/src/stratum_mcp/connectors/: __init__.py  base.py  claude.py  codex.py  factory.py  opencode.py
stratum-mcp/src/stratum_mcp/guard/: __init__.py  errors.py  evidence.py  fingerprint.py  store.py  transition.py
stratum-mcp/src/stratum_mcp/hooks/: stratum-post-tool-failure.sh  stratum-session-start.sh  stratum-session-stop.sh
stratum-mcp/src/stratum_mcp/skills/distill/: SKILL.md
stratum-mcp/src/stratum_mcp/skills/stratum-build/: SKILL.md
stratum-mcp/src/stratum_mcp/skills/stratum-debug/: SKILL.md
stratum-mcp/src/stratum_mcp/skills/stratum-feature/: SKILL.md
stratum-mcp/src/stratum_mcp/skills/stratum-learn/: SKILL.md
stratum-mcp/src/stratum_mcp/skills/stratum-migrate/: SKILL.md
stratum-mcp/src/stratum_mcp/skills/stratum-onboard/: SKILL.md
stratum-mcp/src/stratum_mcp/skills/stratum-plan/: SKILL.md
stratum-mcp/src/stratum_mcp/skills/stratum-refactor/: SKILL.md
stratum-mcp/src/stratum_mcp/skills/stratum-review/: SKILL.md
stratum-mcp/src/stratum_mcp/skills/stratum-speckit/: SKILL.md
stratum-mcp/src/stratum_mcp/skills/stratum-test/: SKILL.md
stratum-mcp/tests/: test_agent_run_streaming.py  test_cert.py  test_codex_chunk_size.py  test_codex_connector_sync.py  test_codex_durable.py  test_connector_factory.py  test_connectors.py  test_connectors_env.py  test_connectors_interrupt.py  test_doctor.py  test_executor_judge.py  test_flowstate_parallel.py  test_goal_e2e.py  test_goal_tool.py  test_guard_cli.py  test_guard_evidence.py  test_guard_store.py  test_guard_transition.py  test_migrate.py  test_par_merge_queue.py  test_parallel_exec.py  test_parallel_server_dispatch.py  test_pipeline.py  test_pipeline_fanout.py  test_pipeline_route.py  test_pricing.py  test_reattach.py  test_result_cache.py  test_result_cache_e2e.py  test_result_cache_ir.py  test_result_cache_key.py  test_result_cache_validate.py  test_run_budget.py  test_serve.py  test_server_distill.py  test_server_guard.py  test_server_inline_learn.py  test_server_judge.py  test_spec_judge.py  test_spec_task_timeout.py  (+11 more)
stratum-mcp/tests/contracts/: test_errors.py  test_gate_api.py  test_ir_schema.py  test_ir_v02_extensions.py  test_query_contract.py  test_workflow_budget_ir.py
stratum-mcp/tests/integration/: test_accumulator.py  test_agent_run.py  test_agent_run_live.py  test_checkpoints.py  test_compile_speckit.py  test_ensure_violation_passthrough.py  test_flow_composition.py  test_gate_revise.py  test_guardrails.py  test_hook_self_install.py  test_inline_steps.py  test_iterations.py  test_list_workflows.py  test_parallel_executor.py  test_parallel_schema.py  test_persistence.py  test_policy_skip.py  test_roundtrip.py  test_routing.py  test_score_expr.py  test_server.py  test_setup.py  test_stagnation.py  test_uninstall.py  test_vocabulary_compliance_flow.py
stratum-mcp/tests/invariants/: test_draft_pipeline.py  test_executor.py  test_plan_completion.py  test_spec_integrity.py  test_task_compiler.py  test_vocabulary_compliance.py
stratum-ui/: README.md  package-lock.json  package.json  pyproject.toml  vite.app.config.js  vite.config.js
stratum-ui/src/: index.jsx
stratum-ui/src/app/: index.html  main.jsx
stratum-ui/src/components/: GateQueue.jsx  GeneratePanel.jsx  PipelineEditor.jsx  RunDetail.jsx  RunList.jsx
stratum-ui/src/stratum_ui/: __init__.py  server.py
stratum-ui/src/stratum_ui/templates/: base.html  editor.html  gates.html  generate.html  run_detail.html  runs.html
stratum-ui/src/utils/: generate.js
stratum-ui/tests/: test_server.py
tests/: test_concurrency.py  test_contracts.py  test_decorators.py  test_distill_cli.py  test_distill_corpus.py  test_distill_detector.py  test_distill_synthesize.py  test_e2e.py  test_executor.py  test_flow_scope.py  test_goal_adversarial.py  test_goal_coverage_sweep.py  test_goal_kernel.py  test_goal_prompts.py  test_goal_state.py  test_goal_worker.py  test_hitl.py  test_inline_corpus.py  test_inline_learn.py  test_judge_corpus.py  test_judge_jail_docker.py  test_judge_kernel.py  test_judge_predicates.py  test_judge_readjail.py  test_judge_sandbox.py  test_judge_schema.py  test_judge_staging.py  test_judge_t3.py  test_judge_verifier.py  test_otlp.py  test_pipeline.py  test_pipeline_runner.py  test_pipeline_types.py  test_postmortem_decompose.py  test_postmortem_gate.py  test_postmortem_replay.py  test_postmortem_signals_v22.py  test_project_config.py  test_run_workspace.py
(+341 files in other folders)
