[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratum-py"
version = "0.2.61"
description = "LLM calls that behave like the rest of your code"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Stratum", email = "stratum@regression.io"}]
keywords = ["llm", "ai", "inference", "contracts", "structured-outputs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["litellm>=1.0", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-timeout>=0.5"]

[project.urls]
Homepage = "https://github.com/regression-io/stratum"
Repository = "https://github.com/regression-io/stratum"
Documentation = "https://github.com/regression-io/stratum/blob/main/SPEC.md"
"Bug Tracker" = "https://github.com/regression-io/stratum/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 120

[tool.hatch.build.targets.wheel]
packages = ["src/stratum"]
# STRAT-JUDGE-T3-READJAIL-CODEXNEST: ship the vendored codex jail Dockerfile
# as package data so sandbox._DOCKERFILE resolves in an installed wheel.
artifacts = ["src/stratum/judge/jail/Dockerfile"]

[tool.hatch.build.targets.wheel.force-include]
"src/stratum/judge/jail/Dockerfile" = "stratum/judge/jail/Dockerfile"
