[project]
name = "stratum-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "jsonschema>=4.20",
    "pyyaml>=6.0",
]

[project.scripts]
stratum-mcp = "stratum_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stratum_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
