[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratum-mcp"
version = "0.1.4"
description = "Stratum MCP server for Claude Code — structured execution, typed contracts, postcondition enforcement"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Stratum", email = "stratum@regression.io"}]
keywords = ["llm", "mcp", "claude-code", "ai", "structured-outputs", "contracts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
    "jsonschema>=4.20",
    "pyyaml>=6.0",
]

[project.scripts]
stratum-mcp = "stratum_mcp.server:main"

[project.urls]
Homepage = "https://github.com/regression-io/stratum"
Repository = "https://github.com/regression-io/stratum"
Documentation = "https://github.com/regression-io/stratum/blob/main/blog/stratum-in-claude-code.md"
"Bug Tracker" = "https://github.com/regression-io/stratum/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stratum_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
