[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratum-ui"
version = "0.1.0"
description = "Stratum UI — deprecated Python shim (UI moved to npm: @stratum/ui)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Stratum", email = "stratum@regression.io"}]
keywords = ["llm", "ai", "stratum", "pipeline", "monitor", "gate"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
stratum-ui = "stratum_ui.server:main"

[project.urls]
Homepage = "https://github.com/regression-io/stratum"
Repository = "https://github.com/regression-io/stratum"

[tool.hatch.build.targets.wheel]
packages = ["src/stratum_ui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
